# src/main/java/de/medizininformatikinitiative/dataportal/backend/terminology/api/ProfileSearchEntry.java
@@ -1,7 +1,7 @@
 package de.medizininformatikinitiative.dataportal.backend.terminology.api;
 
 import de.medizininformatikinitiative.dataportal.backend.common.api.DisplayEntry;
-import de.medizininformatikinitiative.dataportal.backend.terminology.es.model.ProfileCategory;
+import de.medizininformatikinitiative.dataportal.backend.terminology.es.model.ProfileDisplay;
 import de.medizininformatikinitiative.dataportal.backend.terminology.es.model.ProfileDocument;
 import lombok.Builder;
 
@@ -16,8 +16,8 @@ public record ProfileSearchEntry(
     DisplayEntry display,
     boolean selectable,
     String url,
-    DisplayEntry module,
-    List<DisplayEntry> categories,
+    ProfileDisplayEntry module,
+    List<ProfileDisplayEntry> categories,
     int availability
 ) {
   public static ProfileSearchEntry of(ProfileDocument document) {
@@ -27,13 +27,13 @@ public record ProfileSearchEntry(
         .display(DisplayEntry.of(document.display()))
         .selectable(document.selectable())
         .url(document.url())
-        .module(document.module() == null ? null : DisplayEntry.of(document.module().display()))
+        .module(ProfileDisplayEntry.of(document.module()))
         .categories(toCategoryDisplayEntries(document.categories()))
         .availability(document.availability() == null ? 0 : document.availability())
         .build();
   }
 
-  private static List<DisplayEntry> toCategoryDisplayEntries(Collection<ProfileCategory> categories) {
-    return categories == null ? List.of() : categories.stream().map(c -> DisplayEntry.of(c.display())).filter(Objects::nonNull).toList();
+  private static List<ProfileDisplayEntry> toCategoryDisplayEntries(Collection<ProfileDisplay> categories) {
+    return categories == null ? List.of() : categories.stream().map(ProfileDisplayEntry::of).filter(Objects::nonNull).toList();
   }
 }
