# src/main/java/de/medizininformatikinitiative/dataportal/backend/terminology/es/model/ProfileDocument.java
@@ -15,8 +15,8 @@ public record ProfileDocument(
     ProfileDisplay description,
     boolean selectable,
     String url,
-    ProfileModule module,
-    Collection<ProfileCategory> categories,
+    ProfileDisplay module,
+    Collection<ProfileDisplay> categories,
     Collection<ProfileField> fields,
     Collection<ProfileRelative> parents,
     Collection<ProfileRelative> children,
